--- a/max_temp.html
+++ b/max_temp.html
@@ -3,7 +3,7 @@
 	<html lang="en-us">	
 	<head>	
         <meta charset="UTF-8">
-        <title>Homework 12 - Latitude Data visualizations</title>
+        <title>Temperature Vizualization</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
 	</head>	
@@ -37,34 +37,37 @@
 	<body>
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <div id="summary">
-                        <h2>Summary: Latitude vs. X</h2>
+                <div class="col-md-8">
+                    <div id="tempSum">
+                        <h2>Max Temperature</h2>
                         <br>
-                        <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="sampleimage">
+                        <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="max_temp">
                         <br>
                         <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 5000 cities</p>
-                        <br>
+                        <!-- <br> -->
                         <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, windspeed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <div id="viz">
                         <h3>Visualizations</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                         <div class = "row" id = "top-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="MaxTempImg">
+                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" class="vizGraphs">
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of temperature graph" id="HumidityImg">
+                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of temperature graph" class="vizGraphs">
                             </div>
                         </div>
                         <div class = "row" id="bottom-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of temperature graph" id="CloudinessImg">
+                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of temperature graph" class="vizGraphs">
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of temperature graph" id="Wind Speed">
+                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of temperature graph" class="vizGraphs">
                             </div>
                         </div>
                     </div>
