committing changes, nearing completion

--- a/data.html
+++ b/data.html
@@ -15,10 +15,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
 	</head>	
     <header>
-        <div class="container">
+        <div class="container nav_container">
             <nav class="navbar nav">
                 
-                <div class="dropdown">
+                <!-- <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                             Plots
                             <span class="caret"></span>
@@ -27,13 +27,15 @@
                             <li><a href="#" class = "pull-right">Link to Maxxx Temperature Plot Page</a></li>
                             <li><a href="#" class = "pull-right">Link to Humidity Plot Page</a></li>
                             <li><a href="#" class = "pull-right">Cloudiness</a></li>
-                            <li><a href="#" class = "pull-right">Wind Speed</a></li>
+                            <li><a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a></li>
                         </ul>
 
 
-                </div>
+                </div> -->
  
-                <div class="dropdown">
+
+
+                <!-- <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         Dropdown
                         <span class="caret"></span>
@@ -45,7 +47,7 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                     </ul>
-                </div>
+                </div> -->
 
 
 
@@ -64,7 +66,7 @@
                         <a href="#" class = "pull-right">Cloudiness</a>
                     </li>
                     <li>
-                        <a href="#" class = "pull-right">Wind Speed</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a>
                     </li>
                     <li>
                         <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">Data</a>
