--- a/wind.html
+++ b/wind.html
@@ -3,7 +3,7 @@
 	<html lang="en-us">	
 	<head>	
         <meta charset="UTF-8">
-        <title>Homework 12 - Latitude Data visualizations</title>
+        <title>Wind Visualization</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
 	</head>	
@@ -38,14 +38,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <div id="summary">
-                        <h2>Summary: Latitude vs. X</h2>
+                    <div id="img_sum">    
+                        <h2>Wind Speed</h2>
                         <br>
-                            <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="summaryImg">
+                            <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" id="main_graph">
                         <br>
-                        <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 5000 cities</p>
-                        <br>
-                        <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, windspeed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                        <p>The correlation is not strong, but there may be more extreme winds at extreme latitudes.</p>
+                        <!-- <br> -->
+                        <!-- <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, windspeed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p> -->
                     </div>
                 </div>
                 <div class="col-md-5">
@@ -53,18 +53,26 @@
                         <h3>Visualizations</h3>
                         <div class = "row" id = "top-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="MaxTempImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\max_temp.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" class="vizGraphs">
+                                </a>
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of humidity graph" id="HumidityImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of humidity graph" class="vizGraphs">
+                                </a>
                             </div>
                         </div>
                         <div class = "row" id="bottom-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of cloud graph" id="CloudinessImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\cloud.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of cloud graph" class="vizGraphs">
+                                </a>
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" id="WindImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\max_temp.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" class="vizGraphs">
+                                </a>
                             </div>
                         </div>
                     </div>
