--- a/clouds.html
+++ b/clouds.html
@@ -3,7 +3,7 @@
 	<html lang="en-us">	
 	<head>	
         <meta charset="UTF-8">
-        <title>Temperature Vizualization</title>
+        <title>Wind Visualization</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
 	</head>	
@@ -13,22 +13,22 @@
                 <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/index.html" id = "home-link">Latitude</a>    
                 <ul class="nav-pills">
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">temperature</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">Temp</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">humidity</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">Link to Humidity Plot Page</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html" class = "pull-right">cloudiness</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html" class = "pull-right">Cloudiness</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">wind speed</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">comparisons</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">Comparisons</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">data</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">Data</a>
                     </li>
                 </ul>
             </nav>
@@ -38,12 +38,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <div id="img_sum">
-                        <h2>Max Temperature</h2>
+                    <div id="img_sum">    
+                        <h2>Cloudiness</h2>
                         <br>
-                        <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="main_graph">
+                            <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of cloud graph" id="main_graph">
                         <br>
-                        <p>Currently, since it's Summer in the Northern Hemisphere, we see temperatures peak north of the equator at approximately 20 degrees latitude.</p>
+                        <p>One can tell there seems to be more data points for north of the equater, but there is little correlation with latitude and cloudiness.</p>
                         <!-- <br> -->
                         <!-- <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, windspeed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p> -->
                     </div>
