--- a/data.html
+++ b/data.html
@@ -17,62 +17,25 @@
     <header>
         <div class="container nav_container">
             <nav class="navbar nav">
-                
-                <!-- <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Plots
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#" class = "pull-right">Link to Maxxx Temperature Plot Page</a></li>
-                            <li><a href="#" class = "pull-right">Link to Humidity Plot Page</a></li>
-                            <li><a href="#" class = "pull-right">Cloudiness</a></li>
-                            <li><a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a></li>
-                        </ul>
-
-
-                </div> -->
- 
-
-
-                <!-- <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Dropdown
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </div> -->
-
-
-
-
-
-
                 <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/index.html" id = "home-link">Latitude</a>    
                 <ul class="nav-pills">
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">Temp</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">temperature</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">Humidity</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">humidity</a>
                     </li>
                     <li>
-                        <a href="#" class = "pull-right">Cloudiness</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html" class = "pull-right">cloudiness</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">wind speed</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">Data</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">comparisons</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">Comparisons</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">data</a>
                     </li>
                 </ul>
             </nav>
@@ -85,7 +48,7 @@
             <p>The following table includes all of the data used for plotting during this project.</p>
             <br>
             <br>
-            <table class="table table-bordered table-hover table-condensed">
+            <table class="table table-bordered table-hover table-condensed table-striped">
                 <thead><tr><th title="Field #1">City</th>
                 <th title="Field #2">Cloudiness (%)</th>
                 <th title="Field #3">Humidity (%)</th>
