--- a/humidity.html
+++ b/humidity.html
@@ -13,22 +13,22 @@
                 <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/index.html" id = "home-link">Latitude</a>    
                 <ul class="nav-pills">
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">Link to Maxxx Temperature Plot Page</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/max_temp.html#" class = "pull-right">temperature</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">Link to Humidity Plot Page</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html" class = "pull-right">humidity</a>
                     </li>
                     <li>
-                        <a href="#" class = "pull-right">Cloudiness</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html" class = "pull-right">cloudiness</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">Wind Speed</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html" class = "pull-right">wind speed</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">Comparisons</a>
+                        <a href="file:///C:/Users/mckin/Desktop/repos/HW12_HTML/comparison.html#" class = "pull-right">comparisons</a>
                     </li>
                     <li>
-                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">Data</a>
+                        <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\data.html" class = "pull-right">data</a>
                     </li>
                 </ul>
             </nav>
@@ -43,7 +43,7 @@
                         <br>
                         <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of temperature graph" id="main_graph">
                         <br>
-                        <p>Humidity is highest near the equator.</p>
+                        <p>Humidity is highest near the equator. There are some datapoints approximately 20 degrees south of the equator with quite low humidity. Presumably these places are in the destert</p>
                         <!-- <br> -->
                         <p>Also note that humidity never quite goes to zero. It seems to bottom out at around 15% humidity.</p>
                     </div>
@@ -65,12 +65,12 @@
                         </div>
                         <div class = "row" id="bottom-row">
                             <div class="col-sm-6">
-                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\cloud.html">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html">
                                     <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of cloud graph" class="vizGraphs">
                                 </a>
                             </div>
                             <div class="col-sm-6">
-                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\max_temp.html">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html">
                                     <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" class="vizGraphs">
                                 </a>
                             </div>
