updating viz div in index

--- a/index.html
+++ b/index.html
@@ -53,18 +53,26 @@
                         <h3>Visualizations</h3>
                         <div class = "row" id = "top-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" id="MaxTempImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\max_temp.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\tempFig.png" alt="Image of temperature graph" class="vizGraphs">
+                                </a>
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of humidity graph" id="HumidityImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\humidity.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\humidityFig.png" alt="Image of humidity graph" class="vizGraphs">
+                                </a>
                             </div>
                         </div>
                         <div class = "row" id="bottom-row">
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudsFig.png" alt="Image of cloud graph" id="CloudinessImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\clouds.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\cloudFig.png" alt="Image of cloud graph" class="vizGraphs">
+                                </a>
                             </div>
                             <div class="col-sm-6">
-                                <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" id="WindImg">
+                                <a href="C:\Users\mckin\Desktop\repos\HW12_HTML\wind.html">
+                                    <img src = "C:\Users\mckin\Desktop\repos\HW12_HTML\images\windFig.png" alt="Image of wind graph" class="vizGraphs">
+                                </a>
                             </div>
                         </div>
                     </div>
